.config/Code - OSS/logs/20240624T180552/window1/exthost/output_logging_20240624T180602/2-Code.log
[Running] cd "/home/lauri/Desktop/coding/rust/" && rustc main.rs && "/home/lauri/Desktop/coding/rust/"main
hello world

[Done] exited with code=0 in 4.998 seconds

[Running] cd "/home/lauri/Desktop/coding/rust/" && rustc main.rs && "/home/lauri/Desktop/coding/rust/"main
hello world

[Done] exited with code=0 in 0.106 seconds

[Running] cd "/home/lauri/Desktop/coding/rust/" && rustc main.rs && "/home/lauri/Desktop/coding/rust/"main
error: format argument must be a string literal
 --> main.rs:3:14
  |
3 |     println!(x);
  |              ^
  |
help: you might be missing a string literal to format with
  |
3 |     println!("{}", x);
  |              +++++

error: aborting due to 1 previous error


[Done] exited with code=1 in 0.077 seconds

[Running] cd "/home/lauri/Desktop/coding/rust/" && rustc main.rs && "/home/lauri/Desktop/coding/rust/"main
error: format argument must be a string literal
 --> main.rs:3:12
  |
3 |     print!(x);
  |            ^
  |
help: you might be missing a string literal to format with
  |
3 |     print!("{}", x);
  |            +++++

error: aborting due to 1 previous error


[Done] exited with code=1 in 0.031 seconds

[Running] cd "/home/lauri/Desktop/coding/rust/" && rustc main.rs && "/home/lauri/Desktop/coding/rust/"main
error[E0308]: mismatched types
 --> main.rs:2:18
  |
2 |     let x: i32 = "nigger";
  |            ---   ^^^^^^^^ expected `i32`, found `&str`
  |            |
  |            expected due to this

error[E0308]: mismatched types
 --> main.rs:3:19
  |
3 |     assert_eq!(x, "nigger")
  |                   ^^^^^^^^ expected `i32`, found `&str`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.

[Done] exited with code=1 in 0.89 seconds

[Running] cd "/home/lauri/Desktop/coding/rust/" && rustc main.rs && "/home/lauri/Desktop/coding/rust/"main

[Done] exited with code=0 in 0.292 seconds

[Running] cd "/home/lauri/Desktop/coding/rust/" && rustc main.rs && "/home/lauri/Desktop/coding/rust/"main
error: expected `;`, found `println`
 --> main.rs:3:28
  |
3 |     assert_eq!(x, "nigger")
  |                            ^ help: add `;` here
4 |     println! (x);
  |     ------- unexpected token

error: format argument must be a string literal
 --> main.rs:4:15
  |
4 |     println! (x);
  |               ^
  |
help: you might be missing a string literal to format with
  |
4 |     println! ("{}", x);
  |               +++++

error: aborting due to 2 previous errors


[Done] exited with code=1 in 0.068 seconds

[Running] cd "/home/lauri/Desktop/coding/rust/" && rustc main.rs && "/home/lauri/Desktop/coding/rust/"main
error: expected `;`, found `println`
 --> main.rs:3:28
  |
3 |     assert_eq!(x, "nigger")
  |                            ^ help: add `;` here
4 |     println! (x);
  |     ------- unexpected token

error: format argument must be a string literal
 --> main.rs:4:15
  |
4 |     println! (x);
  |               ^
  |
help: you might be missing a string literal to format with
  |
4 |     println! ("{}", x);
  |               +++++

error: aborting due to 2 previous errors


[Done] exited with code=1 in 0.035 seconds

[Running] cd "/home/lauri/Desktop/coding/rust/" && rustc main.rs && "/home/lauri/Desktop/coding/rust/"main

[Done] exited with code=0 in 0.081 seconds

[Running] cd "/home/lauri/Desktop/coding/rust/" && rustc main.rs && "/home/lauri/Desktop/coding/rust/"main
error: this file contains an unclosed delimiter
 --> main.rs:3:31
  |
1 | fn main(){
  |          - unclosed delimiter
2 |     let x:  &str = "nigger";
3 |     println!("Hello, {}!", x);
  |                               ^

error: aborting due to 1 previous error


[Done] exited with code=1 in 0.121 seconds

[Running] cd "/home/lauri/Desktop/coding/rust/" && rustc main.rs && "/home/lauri/Desktop/coding/rust/"main
error: this file contains an unclosed delimiter
 --> main.rs:3:31
  |
1 | fn main(){
  |          - unclosed delimiter
2 |     let x:  &str = "nigger";
3 |     println!("Hello, {}!", x);
  |                               ^

error: aborting due to 1 previous error


[Done] exited with code=1 in 0.025 seconds

